--- a/styles.css
+++ b/styles.css
@@ -213,3 +213,14 @@ img{
      
     }
 }
+@media only screen and (min-width:1200px)
+{
+    main{
+        height: 100vh;
+        width: 100%;
+        background-color: hsl(210, 46%, 95%);
+        overflow: hidden;
+        padding:7.5%;
+    }
+    
+}
